ignore auth in like and comments recipe
