# controller/like.go
@@ -41,7 +41,6 @@ func (c *Controller) LikeRecipeUserHandler(ctx *gin.Context) {
 // @Accept		json
 // @Produce		json
 // @Param       id        path      int  true  "Recipe ID"
-// @Param       authorization        header      string  true  "Token Bearer"
 // @Success		200		{int}  100
 // @Router		/recipe/{id}/like [get]
 func (c *Controller) GetLikesHandler(ctx *gin.Context) {
