# docs/swagger.json
@@ -300,13 +300,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token Bearer",
-                        "name": "authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -341,13 +334,6 @@
                         "description": "Recipe ID",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token Bearer",
-                        "name": "authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
